--- a/chat-app/src/App.css
+++ b/chat-app/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.app-container{
+  background-color: #424549;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.layout {
+  border: 2px solid #000;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin-right: 20px;
+  margin-left: 20px;
+  /* margin-bottom: 40px; */
+  /* height: 100vh; */
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
 }
 
-.App-link {
-  color: #61dafb;
+
+.sidebar-section{
+  flex: 1;
+  border: 4px solid #36393e;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.chat-section{
+  flex: 4;
+  overflow-y: auto;
 }
+
