--- a/chat-app/src/App.css
+++ b/chat-app/src/App.css
@@ -2,7 +2,7 @@
   background-color: #424549;
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
@@ -17,6 +17,7 @@
   /* margin-bottom: 40px; */
   /* height: 100vh; */
   display: flex;
+  height: 100vh;
   
 }
 
