--- a/chat-app/src/components/CustomButton/CustomButton.css
+++ b/chat-app/src/components/CustomButton/CustomButton.css
@@ -6,7 +6,7 @@
     font-size: 24px;
     transition: background-color 0.3s ease;
     background-color: #7289da;
-    width: 100%;
+    /* width: 100vw; */
     height: 50px
     
     
